--- a/LoveDive/LoveDive/LoveDive.entitlements
+++ b/LoveDive/LoveDive/LoveDive.entitlements
@@ -12,11 +12,16 @@
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.lkangting.lovedive.com</string>
+		<string>iCloud.lkangting.com.LoveDive</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
+		<string>CloudDocuments</string>
+	</array>
+	<key>com.apple.developer.ubiquity-container-identifiers</key>
+	<array>
+		<string>iCloud.lkangting.com.LoveDive</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
