--- a/LoveDive/LoveDive/Info.plist
+++ b/LoveDive/LoveDive/Info.plist
@@ -26,6 +26,8 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 </dict>
 </plist>
