--- a/LoveDive/LoveDive/LoveDive.entitlements
+++ b/LoveDive/LoveDive/LoveDive.entitlements
@@ -14,5 +14,9 @@
 	<array/>
 	<key>com.apple.developer.icloud-services</key>
 	<array/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.shared.LoveDive</string>
+	</array>
 </dict>
 </plist>
