--- a/LoveDive/LoveDive.xcodeproj/xcshareddata/xcschemes/LoveDive.xcscheme
+++ b/LoveDive/LoveDive.xcodeproj/xcshareddata/xcschemes/LoveDive.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "06657F1A2A6A301D00E8A7D0"
+               BuildableName = "LoveDiveTests.xctest"
+               BlueprintName = "LoveDiveTests"
+               ReferencedContainer = "container:LoveDive.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
